Fix sufficient contrast ratio issue on outcome page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -610,7 +610,7 @@ main {
 }
 
 #game-outcome-message {
-  color: var(--text-color-7);
+  color: var(--text-color);
   font-style: italic;
 }
 
